All_Component_DX/force-app/main/default/objects/SVMX_Optimizer__c/fields/Optimizer_Change_Token__c.field-meta.xml
<CustomField>
    <fullName>Optimizer_Change_Token__c</fullName>
    <description>The change happened on the object. Is used for retry mechanism</description>
    <inlineHelpText>The change happened on the object. Is used for retry mechanism</inlineHelpText>
    <label>Optimizer Change Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>