All_Component_DX/force-app/main/default/objects/SVMX_Optimizer__c/fields/Optimizer_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Optimizer_External_ID__c</fullName>
    <description>ServicePower specific external ID</description>
    <externalId>true</externalId>
    <inlineHelpText>ServicePower specific external ID</inlineHelpText>
    <label>Optimizer External Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>