All_Component_DX/force-app/main/default/objects/SVMX_Optimizer__c/fields/SM_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SM_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>Optimizer Transactions</relationshipLabel>
    <relationshipName>Optimizer_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>